Fix bytecode versioning